--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test-trainee",
   "version": "0.1.0",
+  "homepage":"https://evgeniystreluykov.github.io/test-trainee/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
